--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   sqflite: ^2.1.0+2
-  intl: ^0.18.1
+  intl: ^0.17.0
   dio: ^5.3.3
   hexcolor: ^3.0.1
   shared_preferences: ^2.2.2
@@ -44,15 +45,25 @@ dependencies:
   google_nav_bar: ^5.0.6
   ionicons: ^0.2.2
   flutter_launcher_icons: "^0.13.1"
+  flutter_localizations:
+    sdk: flutter
+
+
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assest/images/AppIcon.jpg"
+  intl_utils: ^2.8.6
+
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+
 
 dev_dependencies:
   flutter_test:
@@ -109,3 +120,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_intl:
+  enabled: true
